codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_empty_mode_only.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭────────────────────────╮"
"│ > Ask Codex to do anyt │"
"│                        │"
"│                        │"
"│                        │"
"│                        │"
"│                        │"
"╰────────────── browser ─╯"
"       100% context left  "
